complete make more.html

--- a/more.html
+++ b/more.html
@@ -38,7 +38,74 @@
             </span>
         </div>
     </header>
+    <main class="more">
+        <header class="more__header">
+            <div class="friends__friend friend"> 
+                <div class="friend__column">
+                    <img src="images/avatar.jpg" class="g-avatar friend__avatar">
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            Nicolas
+                        </span>
+                        <span class="friend__status">
+                            howerll@gmail.com
+                        </span>
+                    </div>
+                </div>
+                <div class="friend__column">
+                    <i class="far fa-comment-alt"></i>
+                </div>
+                
+            </div>
+            <ul class="more__btn-list">
+                <li class="more__btn">
+                    <span class="more__btn-icon"></span>
+                    <span class="more_btn-title">
+                        <i class="far fa-smile fa-2x"></i>
+                        Emoticons
+                    </span>
+                </li>
+                <li class="more__btn">
+                    <span class="more__btn-icon"></span>
+                    <span class="more_btn-title">
+                        <i class="fas fa-brush fa-2x"></i>
+                        Themes
+                    </span>
+                </li>
+                <li class="more__btn">
+                    <span class="more__btn-icon"></span>
+                    <span class="more_btn-title">
+                        <i class="fab fa-kickstarter-k fa-2x"></i>
+                        Account
+                    </span>
+                </li>
+            </ul>
+        </header>
 
+        <section class="more__suggenstions">
+            <h5 class="more__title"> Suggestions </h5>
+            <ul class="more__suggestions-list">
+                <li class="more__suggestion suggestion">
+                    <span class="suggestion__icon">
+                        <i class="fas fa-quote-right fa-2x"></i>
+                    </span>
+                    <span class="suggenstion__title">Kakao Story</span>
+                </li>
+                <li class="more__suggestion suggestion">
+                    <span class="suggestion__icon">
+                        <i class="fas fa-beer fa-2x"></i>
+                    </span>
+                    <span class="suggenstion__title">Kakao friends</span>
+                </li>
+                <li class="more__suggestion suggestion">
+                    <span class="suggestion__icon">
+                        <i class="fas fa-gamepad fa-2x"></i>
+                    </span>
+                    <span class="suggenstion__title">Kakao friend Story</span>
+                </li>
+            </ul>
+        </section>
+    </main>
     <nav class="nav">
         <ul class="nav__list">
             <li class="nva__list-item">
