--- a/find.html
+++ b/find.html
@@ -31,7 +31,7 @@
                 <i class="fas fa-search"></i>
             </span>
             <span class="header_icon">
-                <i class="fas fa-cog fa-5x"></i>
+                <i class="fas fa-cog"></i>
             </span>
         </div>
     </header>
