--- a/friends.html
+++ b/friends.html
@@ -35,7 +35,7 @@
                 <i class="far fa-comment"></i>
             </span>
             <span class="header_icon">
-                <i class="fas fa-cog fa-5x"></i>
+                <i class="fas fa-cog"></i>
             </span>
         </div>
     </header>
