--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
                 <i class="far fa-comment"></i>
             </span>
             <span class="header_icon">
-                <i class="fas fa-cog fa-5x"></i>
+                <i class="fas fa-cog"></i>
             </span>
         </div>
     </header>
     <main>  
         <ul class="chats__list">
             <li class="chats__chat chat">
+                <a href="chat.html">
                 <div class="chat__column">
                     <img src="images/avatar.jpg" alt="" class="chat__avatar g-avatar">
                     <div class="chat__content">
@@ -55,6 +56,7 @@
                         yesterday
                     </span>
                 </div>
+                </a>
             </li>
         </ul>
     </main>
