--- a/chat.html
+++ b/chat.html
@@ -1,91 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="https://kit.fontawesome.com/911bbd475a.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/911bbd475a.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Chat | Kakao Clone</title>
-</head>
-<body>
-    <div class="startus-bar">
-        <div class="startus-bar__column"></div>
-            <span class="startus-bar__clock">
-                13:54
-            </spans
-        <div class="startus-bar__column">
-            <i class="fas fa-clock"></i>
-            <i class="fas fa-volume-up"></i>
-            <i class="fas fa-wifi"></i>
-            <span class="status-bar__battery-level">
-                100%
-                <i class="fas fa-battery-full"></i>
-            </span>
-        </div>
+  </head>
+  <body>
+    <div class="status-bar">
+      <div class="status-bar__column">
+        <span class="status-bar__clock">
+          13:54
+        </span>
+      </div>
+      <div class="status-bar__column">
+        <i class="fas fa-clock"></i>
+        <i class="fas fa-volume-up"></i>
+        <i class="fas fa-wifi"></i>
+        <span class="status-bar__battery-level">
+          100%
+          <i class="fas fa-battery-full"></i>
+        </span>
+      </div>
     </div>
     <header class="header">
-        <div class="header__header-column">
-            <a href="index.html" class="header__back-btn">
-                <i class="fas fa-arrow-left fa-2x"></i>
-            </a>
-            <h1 class="header__title"> Best Friend </h1>
-        </div>
-        <div class="header__header-column">
-            <span class="header_icon">
-                <i class="fas fa-search"></i>
-            </span>
-            <span class="header_icon">
-                <i class="fas fa-bars"></i>
-            </span>
-            <span class="header_icon">
-                <i class="fas fa-cog"></i>
-            </span>
-        </div>
+      <div class="header__header-column">
+        <a href="index.html" class="header__back-btn">
+          <i class="fas fa-arrow-left"></i>
+        </a>
+        <h1 class="header__title">Best Friend</h1>
+      </div>
+      <div class="header__header-column">
+        <span class="header__icon">
+          <i class="fas fa-search"></i>
+        </span>
+        <span class="header__icon">
+          <i class="fas fa-bars"></i>
+        </span>
+        <span class="header__icon">
+          <i class="fas fa-cog"></i>
+        </span>
+      </div>
     </header>
 
     <main class="chat">
-        <ul class="chat__messages">
-            <span class="chat__timestamp">Fridaym January 11, 2019 </span>
-            <li class="incoming-message message">
-                <img src="images/avatar.jpg"  class="g-avatar message">
-                <div class="message__content">
-                    <span class="message__author"> Best Friend </span>
-                    <div class="message__buble">
-                        Congrats I love you!
-                    </div>
-                </div>
-                <span class="message_tiemstamp"></span>
-            </li>
+      <ul class="chat__messages">
+        <span class="chat__timestamp">Fridaym January 11, 2019 </span>
+        <li class="incoming-message message">
+          <img src="images/avatar.jpg" class="g-avatar message" />
+          <div class="message__content">
+            <span class="message__author"> Best Friend </span>
+            <div class="message__buble">
+              Congrats I love you!
+            </div>
+          </div>
+          <span class="message_tiemstamp"></span>
+        </li>
 
-            <li class="incoming-message message">
-                <span class="message_tiemstamp"></span>
-                <div class="message__content">
-                    <div class="message__buble">
-                        Thank you see you soon!
-                    </div>
-                </div>
-               
-            </li>
-
-        </ul>
-
+        <li class="incoming-message message">
+          <span class="message_tiemstamp"></span>
+          <div class="message__content">
+            <div class="message__buble">
+              Thank you see you soon!
+            </div>
+          </div>
+        </li>
+      </ul>
     </main>
     <div class="chat__write">
-        <div class="chat__write-column">
-            <i class="far fa-plus-square"></i>
-        </div>
-        <div class="chat__write-column">
-            <input type="text" placeholder="Send message" class="chat__write-input">
-        </div>
-        <div class="chat__write-column">
-            <span class="chat__write-icon">
-                <i class="far fa-smile-wink"></i>
-            </span>
-            <span class="chat__write-icon">
-                <i class="fas fa-microphone"></i>
-            </span>
-        </div>
+      <div class="chat__write-column">
+        <i class="far fa-plus-square"></i>
+      </div>
+      <div class="chat__write-column">
+        <input
+          type="text"
+          placeholder="Send message"
+          class="chat__write-input"
+        />
+      </div>
+      <div class="chat__write-column">
+        <span class="chat__write-icon">
+          <i class="far fa-smile-wink"></i>
+        </span>
+        <span class="chat__write-icon">
+          <i class="fas fa-microphone"></i>
+        </span>
+      </div>
     </div>
-
-</body>
+  </body>
 </html>
