--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <title>Chats | Kakao Clone</title>
   </head>
   <body>
-    <div class="startus-bar">
-      <div class="startus-bar__column"></div>
-      <span class="startus-bar__clock">
-        13:54
-      </span>
-      <div class="startus-bar__column">
+    <div class="status-bar">
+      <div class="status-bar__column">
+        <span class="status-bar__clock">
+          13:54
+        </span>
+      </div>
+      <div class="status-bar__column">
         <i class="fas fa-clock"></i>
-        <i class="fas fa-volume-up"></i>
+        <i class="fas fa-volume-mute"></i>
         <i class="fas fa-wifi"></i>
         <span class="status-bar__battery-level">
           100%
@@ -32,13 +33,13 @@
         <h1 class="header__title">Chats</h1>
       </div>
       <div class="header__header-column">
-        <span class="header_icon">
+        <span class="header__icon">
           <i class="fas fa-search"></i>
         </span>
-        <span class="header_icon">
+        <span class="header__icon">
           <i class="far fa-comment"></i>
         </span>
-        <span class="header_icon">
+        <span class="header__icon">
           <i class="fas fa-cog"></i>
         </span>
       </div>
@@ -47,22 +48,23 @@
       <ul class="chats__list">
         <li class="chats__chat chat">
           <a href="chat.html">
-            <div class="chat__column">
-              <img
-                src="images/avatar.jpg"
-                alt=""
-                class="chat__avatar g-avatar"
-              />
-              <div class="chat__content">
-                <span class="chat__username">Lyne</span>
-                <span class="chat__preview">Going Home!</span>
+            <div class="chats__chat friend friend--lg">
+              <div class="friend__column">
+                <img src="images/avatar.jpg" class="m-avatar friend__avatar" />
+                <div class="friend__content">
+                  <span class="friend__name">
+                    Lynn
+                  </span>
+                  <span class="friend__bottom-text">
+                    Going Home!
+                  </span>
+                </div>
               </div>
-            </div>
-
-            <div class="chat__column">
-              <span class="chat__timestamp">
-                yesterday
-              </span>
+              <div class="friend__column">
+                <span class="chat__timestamp">
+                  March 8
+                </span>
+              </div>
             </div>
           </a>
         </li>
@@ -77,6 +79,7 @@
         </li>
         <li class="nva__list-item">
           <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">8</div>
             <i class="fas fa-comment"></i>
           </a>
         </li>
