--- a/more.html
+++ b/more.html
@@ -1,134 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/911bbd475a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/911bbd475a.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/styles.css" />
     <title>More | Kakao Clone</title>
-</head>
-<body>
-    <div class="startus-bar">
-        <div class="startus-bar__column"></div>
-            <span class="startus-bar__clock">
-                13:54
-            </spans
-        <div class="startus-bar__column">
-            <i class="fas fa-clock"></i>
-            <i class="fas fa-volume-up"></i>
-            <i class="fas fa-wifi"></i>
-            <span class="status-bar__battery-level">
-                100%
-                <i class="fas fa-battery-full"></i>
-            </span>
-        </div>
+  </head>
+  <body>
+    <div class="status-bar">
+      <div class="status-bar__column">
+        <span class="status-bar__clock">
+          13:54
+        </span>
+      </div>
+      <div class="status-bar__column">
+        <i class="fas fa-clock"></i>
+        <i class="fas fa-volume-up"></i>
+        <i class="fas fa-wifi"></i>
+        <span class="status-bar__battery-level">
+          100%
+          <i class="fas fa-battery-full"></i>
+        </span>
+      </div>
     </div>
     <header class="header">
-        <div class="header__header-column">
-            <h1 class="header__title"> More </h1>
-        </div>
-        <div class="header__header-column">
-            <span class="header_icon">
-                <i class="fas fa-search"></i>
-            </span>
-            <span class="header_icon">
-                <i class="fas fa-qrcode"></i>
-            </span>
-            <span class="header_icon">
-                <i class="fas fa-cog "></i>
-            </span>
-        </div>
+      <div class="header__header-column">
+        <h1 class="header__title">More</h1>
+      </div>
+      <div class="header__header-column">
+        <span class="header__icon">
+          <i class="fas fa-search"></i>
+        </span>
+        <span class="header__icon">
+          <i class="fas fa-qrcode"></i>
+        </span>
+        <span class="header__icon">
+          <i class="fas fa-cog"></i>
+        </span>
+      </div>
     </header>
     <main class="more">
-        <header class="more__header">
-            <div class="friends__friend friend"> 
-                <div class="friend__column">
-                    <img src="images/avatar.jpg" class="g-avatar friend__avatar">
-                    <div class="friend__content">
-                        <span class="friend__name">
-                            Nicolas
-                        </span>
-                        <span class="friend__status">
-                            howerll@gmail.com
-                        </span>
-                    </div>
-                </div>
-                <div class="friend__column">
-                    <i class="far fa-comment-alt"></i>
-                </div>
-                
+      <header class="more__header">
+        <div class="friends__friend friend">
+          <div class="friend__column">
+            <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">
+                Nicolas
+              </span>
+              <span class="friend__status">
+                howerll@gmail.com
+              </span>
             </div>
-            <ul class="more__btn-list">
-                <li class="more__btn">
-                    <span class="more__btn-icon"></span>
-                    <span class="more_btn-title">
-                        <i class="far fa-smile fa-2x"></i>
-                        Emoticons
-                    </span>
-                </li>
-                <li class="more__btn">
-                    <span class="more__btn-icon"></span>
-                    <span class="more_btn-title">
-                        <i class="fas fa-brush fa-2x"></i>
-                        Themes
-                    </span>
-                </li>
-                <li class="more__btn">
-                    <span class="more__btn-icon"></span>
-                    <span class="more_btn-title">
-                        <i class="fab fa-kickstarter-k fa-2x"></i>
-                        Account
-                    </span>
-                </li>
-            </ul>
-        </header>
+          </div>
+          <div class="friend__column">
+            <i class="far fa-comment-alt"></i>
+          </div>
+        </div>
+        <ul class="more__btn-list">
+          <li class="more__btn">
+            <span class="more__btn-icon">
+              <i class="far fa-smile fa-2x"></i>
+            </span>
+            <span class="more_btn-title">
+              Emoticons
+            </span>
+          </li>
+          <li class="more__btn">
+            <span class="more__btn-icon">
+              <i class="fas fa-brush fa-2x"></i>
+            </span>
+            <span class="more_btn-title">
+              Themes
+            </span>
+          </li>
+          <li class="more__btn">
+            <span class="more__btn-icon"></span>
+              <i class="fab fa-kickstarter-k fa-2x"></i>
+            </span>
+            <span class="more_btn-title">
+              Account
+            </span>
+          </li>
+        </ul>
+      </header>
 
-        <section class="more__suggenstions">
-            <h5 class="more__title"> Suggestions </h5>
-            <ul class="more__suggestions-list">
-                <li class="more__suggestion suggestion">
-                    <span class="suggestion__icon">
-                        <i class="fas fa-quote-right fa-2x"></i>
-                    </span>
-                    <span class="suggenstion__title">Kakao Story</span>
-                </li>
-                <li class="more__suggestion suggestion">
-                    <span class="suggestion__icon">
-                        <i class="fas fa-beer fa-2x"></i>
-                    </span>
-                    <span class="suggenstion__title">Kakao friends</span>
-                </li>
-                <li class="more__suggestion suggestion">
-                    <span class="suggestion__icon">
-                        <i class="fas fa-gamepad fa-2x"></i>
-                    </span>
-                    <span class="suggenstion__title">Kakao friend Story</span>
-                </li>
-            </ul>
-        </section>
+      <section class="more__suggenstions">
+        <h5 class="more__title">Suggestions</h5>
+        <ul class="more__suggestions-list">
+          <li class="more__suggestion suggestion">
+            <span class="suggestion__icon">
+              <i class="fas fa-quote-right"></i>
+            </span>
+            <span class="suggenstion__title">Kakao Story</span>
+          </li>
+          <li class="more__suggestion suggestion">
+            <span class="suggestion__icon">
+              <i class="fas fa-beer"></i>
+            </span>
+            <span class="suggenstion__title">Kakao friends</span>
+          </li>
+          <li class="more__suggestion suggestion">
+            <span class="suggestion__icon">
+              <i class="fas fa-gamepad"></i>
+            </span>
+            <span class="suggenstion__title">Kakao friend Story</span>
+          </li>
+        </ul>
+      </section>
     </main>
     <nav class="nav">
-        <ul class="nav__list">
-            <li class="nva__list-item">
-                <a href="friends.html" class="nav__list-link">
-                    <i class="far fa-user"></i>
-                </a>
-            </li>
-            <li class="nva__list-item">
-                <a href="index.html" class="nav__list-link">
-                    <i class="fas fa-comment"></i>
-                </a></li>
-            <li class="nva__list-item">
-                <a href="find.html" class="nav__list-link">
-                    <i class="fas fa-search"></i>
-                </a>
-            </li>
-            <li class="nva__list-item">
-                <a href="more.html" class="nav__list-link">
-                    <i class="class fas fa-ellipsis-h"></i>
-                </a>
-            </li>
-        </ul>
+      <ul class="nav__list">
+        <li class="nva__list-item">
+          <a href="friends.html" class="nav__list-link">
+            <i class="far fa-user"></i>
+          </a>
+        </li>
+        <li class="nva__list-item">
+          <a href="index.html" class="nav__list-link">
+            <i class="fas fa-comment"></i>
+          </a>
+        </li>
+        <li class="nva__list-item">
+          <a href="find.html" class="nav__list-link">
+            <i class="fas fa-search"></i>
+          </a>
+        </li>
+        <li class="nva__list-item">
+          <a href="more.html" class="nav__list-link">
+            <i class="class fas fa-ellipsis-h"></i>
+          </a>
+        </li>
+      </ul>
     </nav>
-</body>
+  </body>
 </html>
