--- a/settings.html
+++ b/settings.html
@@ -8,12 +8,12 @@
     <title>settings | Kakao Clone</title>
 </head>
 <body>
-    <div class="startus-bar">
-        <div class="startus-bar__column"></div>
-            <span class="startus-bar__clock">
+    <div class="status-bar">
+        <div class="status-bar__column"></div>
+            <span class="status-bar__clock">
                 13:54
             </spans
-        <div class="startus-bar__column">
+        <div class="status-bar__column">
             <i class="fas fa-clock"></i>
             <i class="fas fa-volume-up"></i>
             <i class="fas fa-wifi"></i>
@@ -28,13 +28,13 @@
             <h1 class="header__title"> Settings </h1>
         </div>
         <div class="header__header-column">
-            <span class="header_icon">
+            <span class="header__icon">
                 <i class="fas fa-search"></i>
             </span>
-            <span class="header_icon">
+            <span class="header__icon">
                 <i class="far fa-comment"></i>
             </span>
-            <span class="header_icon">
+            <span class="header__icon">
                 <i class="fas fa-cog fa-5x"></i>
             </span>
         </div>
