--- a/more.html
+++ b/more.html
@@ -3,28 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/911bbd475a.js"
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
-    ></script>
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <title>More | Kakao Clone</title>
   </head>
   <body>
     <div class="status-bar">
       <div class="status-bar__column">
-        <span class="status-bar__clock">
-          13:54
-        </span>
+        <span class="status-bar__clock">13:54 </span>
       </div>
       <div class="status-bar__column">
         <i class="fas fa-clock"></i>
-        <i class="fas fa-volume-up"></i>
+        <i class="fas fa-volume-mute"></i>
         <i class="fas fa-wifi"></i>
-        <span class="status-bar__battery-level">
-          100%
-          <i class="fas fa-battery-full"></i>
-        </span>
+        <span class="status-bar__battery-level">100%</span>
+        <i class="fas fa-battery-full"></i>
       </div>
     </div>
     <header class="header">
@@ -39,26 +38,28 @@
           <i class="fas fa-qrcode"></i>
         </span>
         <span class="header__icon">
-          <i class="fas fa-cog"></i>
+          <a href="settings.html">
+            <i class="fas fa-cog"></i>
+          </a>
         </span>
       </div>
     </header>
     <main class="more">
       <header class="more__header">
-        <div class="friends__friend friend">
+        <div class="friends__friend friend friend--lg">
           <div class="friend__column">
             <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Nicolas
+                Nicolás Serrano
               </span>
               <span class="friend__status">
-                howerll@gmail.com
+                itnicolasme@gmail.com
               </span>
             </div>
           </div>
           <div class="friend__column">
-            <i class="far fa-comment-alt"></i>
+            <i class="far fa-comment-alt fa-2x"></i>
           </div>
         </div>
         <ul class="more__btn-list">
@@ -66,7 +67,7 @@
             <span class="more__btn-icon">
               <i class="far fa-smile fa-2x"></i>
             </span>
-            <span class="more_btn-title">
+            <span class="more__btn-title">
               Emoticons
             </span>
           </li>
@@ -74,68 +75,70 @@
             <span class="more__btn-icon">
               <i class="fas fa-brush fa-2x"></i>
             </span>
-            <span class="more_btn-title">
+            <span class="more__btn-title">
               Themes
             </span>
           </li>
           <li class="more__btn">
-            <span class="more__btn-icon"></span>
+            <span class="more__btn-icon">
               <i class="fab fa-kickstarter-k fa-2x"></i>
             </span>
-            <span class="more_btn-title">
+            <span class="more__btn-title">
               Account
             </span>
           </li>
         </ul>
       </header>
-
-      <section class="more__suggenstions">
+      <section class="more__suggestions">
         <h5 class="more__title">Suggestions</h5>
         <ul class="more__suggestions-list">
           <li class="more__suggestion suggestion">
             <span class="suggestion__icon">
               <i class="fas fa-quote-right"></i>
             </span>
-            <span class="suggenstion__title">Kakao Story</span>
+            <span class="suggestion__title">Kakao Story</span>
           </li>
           <li class="more__suggestion suggestion">
             <span class="suggestion__icon">
-              <i class="fas fa-beer"></i>
+              <i class="fas fa-beer fa-2x"></i>
             </span>
-            <span class="suggenstion__title">Kakao friends</span>
+            <span class="suggestion__title">Kakao friend</span>
           </li>
           <li class="more__suggestion suggestion">
             <span class="suggestion__icon">
-              <i class="fas fa-gamepad"></i>
+              <i class="fas fa-gamepad fa-2x"></i>
             </span>
-            <span class="suggenstion__title">Kakao friend Story</span>
+            <span class="suggestion__title">Friends Gem</span>
           </li>
         </ul>
       </section>
     </main>
     <nav class="nav">
       <ul class="nav__list">
-        <li class="nva__list-item">
+        <li class="nav__list-item">
           <a href="friends.html" class="nav__list-link">
-            <i class="far fa-user"></i>
-          </a>
+            <i class="far fa-user"></i
+          ></a>
         </li>
-        <li class="nva__list-item">
+        <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
-            <i class="fas fa-comment"></i>
+            <i class="far fa-comment"></i>
           </a>
         </li>
-        <li class="nva__list-item">
+        <li class="nav__list-item">
           <a href="find.html" class="nav__list-link">
             <i class="fas fa-search"></i>
           </a>
         </li>
-        <li class="nva__list-item">
+        <li class="nav__list-item">
           <a href="more.html" class="nav__list-link">
-            <i class="class fas fa-ellipsis-h"></i>
+            <i class="fas fa-ellipsis-h"></i>
           </a>
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen small! 😱</span>
+    </div>
   </body>
 </html>
